// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-avatar Clickable 1`] = `
<div
  class="m-avatar m--is-clickable"
  style="width: 192px; height: 192px;"
  tabindex="0"
>
  <img
    src="http://placekitten.com/192/192"
  />
   
</div>
`;

exports[`Storyshots components|m-avatar Custom slot - animation 1`] = `
<div
  class="m-avatar m--is-clickable"
  style="width: 192px; height: 192px;"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="m-icon m-avatar__default-image m--is-avatar-large"
    height="192"
    width="192"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
  <div
    style="width: 100%; text-align: center; position: absolute; bottom: -30%; height: 30%; display: flex; align-items: center; justify-content: center; background-color: rgb(51, 51, 51); color: white;"
  >
    <span
      class="m-avatar__default-button"
    >
      Edit
    </span>
  </div>
</div>
`;

exports[`Storyshots components|m-avatar Image slot 1`] = `
<div
  class="m-avatar"
  style="width: 192px; height: 192px;"
  tabindex="-1"
>
  <img
    src="http://placekitten.com/192/192"
  />
   
</div>
`;

exports[`Storyshots components|m-avatar Large 1`] = `
<div
  class="m-avatar"
  style="width: 192px; height: 192px;"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="m-icon m-avatar__default-image m--is-avatar-large"
    height="192"
    width="192"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
</div>
`;

exports[`Storyshots components|m-avatar Medium 1`] = `
<div
  class="m-avatar"
  style="width: 64px; height: 64px;"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="m-icon m-avatar__default-image m--is-avatar-large"
    height="64"
    width="64"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
</div>
`;

exports[`Storyshots components|m-avatar Small 1`] = `
<div
  class="m-avatar"
  style="width: 32px; height: 32px;"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="m-icon m-avatar__default-image"
    height="32"
    width="32"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
</div>
`;

exports[`Storyshots components|m-avatar Svg slot 1`] = `
<div
  class="m-avatar"
  style="width: 192px; height: 192px;"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="192"
    width="192"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class=""
    />
  </svg>
   
</div>
`;
